Fix [6e5937681a04ca202ec5e7579371e2ce1ab6dc81] modules icons in dark mode
FossilOrigin-Name: 96229e5855b1f48cf31a493a484a4f752ce6011edcfba72d8de1f18577c4d6bb

--- a/src/www/admin/static/styles/01-layout.css
+++ b/src/www/admin/static/styles/01-layout.css
@@ -29,8 +29,14 @@ html.dark {
     --gHoverLinkColor: 250, 127, 127;
 }
 
-html.dark .header .menu, html.dark .header .menu a, html.dark .header .menu li.current h3 span[data-icon]::before  {
+html.dark .header .menu, html.dark .header .menu a, html.dark .header .menu li.current h3 span[data-icon]::before {
     color: rgb(var(--gTextColor)) !important;
+}
+
+html.dark td.icon svg {
+    fill: #fff;
+    max-width: 48px;
+    max-height: 48px;
 }
 
 html {
